Fix menu alignment, default btn color
Fixes custom btn missing default style from #23. Needs design
confirmation for the applied color.

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -413,7 +413,7 @@ body.search-open {
   font-weight: 400;
   line-height: 1.3;
   text-align: center;
-  margin: 31px 0;
+  margin: 31px 10px;
   cursor: pointer;
   word-break: break-word;
   word-wrap: break-word;
@@ -430,7 +430,7 @@ body.search-open {
   border: 2px solid #fff;
   color: white;
 }
-.light-background .content-formatted .custom-btn {
+.content-formatted .custom-btn, .light-background .content-formatted .custom-btn {
   border: 2px solid #000;
   color: black;
 }
@@ -445,7 +445,7 @@ body.search-open {
   color: #000;
   color: rgba(0, 0, 0, 0.71);
 }
-.light-background .content-formatted .custom-btn:hover {
+.content-formatted .custom-btn:hover, .light-background .content-formatted .custom-btn:hover {
   border: 2px solid #000;
   background-color: black;
   color: white;
@@ -596,7 +596,7 @@ body.search-open {
   .menu-main.expanded {
     position: absolute;
     z-index: 10001;
-    top: 60px;
+    top: 64px;
     right: 20px;
     display: block;
     min-width: 350px;
@@ -966,7 +966,7 @@ body.search-open {
   z-index: 10001;
 }
 .front-page .menu-lang-popover.expanded {
-  top: 40px;
+  top: 37px;
 }
 .editmode .menu-lang-popover.expanded {
   padding-bottom: 0;
@@ -2202,7 +2202,7 @@ body.search-open {
 @media screen and (max-width: 1020px) {
   .voog-search-modal {
     left: -220px;
-    right: -38px;
+    right: -40px;
   }
 }
 @media screen and (max-width: 480px) {
