--- a/stylesheets/scss/_search.scss
+++ b/stylesheets/scss/_search.scss
@@ -242,7 +242,7 @@
 
   @include query($tablet-1) {
     left: -220px;
-    right: -38px;
+    right: -40px;
   }
 
   @include query($mobile-1) {
